--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@
 
 @font-face {
   font-family: 'roboto';
-  src: url("fonts/Roboto-Italic.woff") format("woff");
+  src: url("../fonts/Roboto-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic; }
 
